fix: show error on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -60,14 +60,15 @@ body {
 .left-panel {
   display: flex;
   flex-direction: column;
-  gap: 1.5rem;
+  gap: 1rem;
 }
 
 .center-panel {
   display: flex;
   flex-direction: column;
   align-items: center;
-  gap: 2rem;
+  gap: 1rem;
+
 }
 
 .right-panel {
@@ -355,6 +356,11 @@ body {
   .submit-message {
     font-size: 1rem;
     padding: 0.8rem;
+    margin: 0.5rem 0;
+    width: 100%;
+    max-width: 300px;
+    margin-left: auto;
+    margin-right: auto;
   }
 }
 
